fix spacing helper (forgot to add `tera`)

--- a/src/styles/help.spacing.css
+++ b/src/styles/help.spacing.css
@@ -1152,3 +1152,147 @@
 .pr-giga3 {
   padding-right: var(--giga3) !important;
 }
+
+.w-tera1 {
+  width: var(--tera1) !important;
+}
+
+.h-tera1 {
+  height: var(--tera1) !important;
+}
+
+.m-tera1 {
+  margin: var(--tera1) !important;
+}
+
+.mt-tera1 {
+  margin-top: var(--tera1) !important;
+}
+
+.mb-tera1 {
+  margin-bottom: var(--tera1) !important;
+}
+
+.ml-tera1 {
+  margin-left: var(--tera1) !important;
+}
+
+.mr-tera1 {
+  margin-right: var(--tera1) !important;
+}
+
+.p-tera1 {
+  padding: var(--tera1) !important;
+}
+
+.pt-tera1 {
+  padding-top: var(--tera1) !important;
+}
+
+.pb-tera1 {
+  padding-bottom: var(--tera1) !important;
+}
+
+.pl-tera1 {
+  padding-left: var(--tera1) !important;
+}
+
+.pr-tera1 {
+  padding-right: var(--tera1) !important;
+}
+
+.w-tera2 {
+  width: var(--tera2) !important;
+}
+
+.h-tera2 {
+  height: var(--tera2) !important;
+}
+
+.m-tera2 {
+  margin: var(--tera2) !important;
+}
+
+.mt-tera2 {
+  margin-top: var(--tera2) !important;
+}
+
+.mb-tera2 {
+  margin-bottom: var(--tera2) !important;
+}
+
+.ml-tera2 {
+  margin-left: var(--tera2) !important;
+}
+
+.mr-tera2 {
+  margin-right: var(--tera2) !important;
+}
+
+.p-tera2 {
+  padding: var(--tera2) !important;
+}
+
+.pt-tera2 {
+  padding-top: var(--tera2) !important;
+}
+
+.pb-tera2 {
+  padding-bottom: var(--tera2) !important;
+}
+
+.pl-tera2 {
+  padding-left: var(--tera2) !important;
+}
+
+.pr-tera2 {
+  padding-right: var(--tera2) !important;
+}
+
+.w-tera3 {
+  width: var(--tera3) !important;
+}
+
+.h-tera3 {
+  height: var(--tera3) !important;
+}
+
+.m-tera3 {
+  margin: var(--tera3) !important;
+}
+
+.mt-tera3 {
+  margin-top: var(--tera3) !important;
+}
+
+.mb-tera3 {
+  margin-bottom: var(--tera3) !important;
+}
+
+.ml-tera3 {
+  margin-left: var(--tera3) !important;
+}
+
+.mr-tera3 {
+  margin-right: var(--tera3) !important;
+}
+
+.p-tera3 {
+  padding: var(--tera3) !important;
+}
+
+.pt-tera3 {
+  padding-top: var(--tera3) !important;
+}
+
+.pb-tera3 {
+  padding-bottom: var(--tera3) !important;
+}
+
+.pl-tera3 {
+  padding-left: var(--tera3) !important;
+}
+
+.pr-tera3 {
+  padding-right: var(--tera3) !important;
+}
